--- a/chat.htm
+++ b/chat.htm
@@ -53,6 +53,7 @@
           <div class="user-component_columm">21:22</div>
         </div></a
       >
+      <div class="big-screen">your screen too big!!!!!</div>
     </main>
 
     <nav class="nav">
