--- a/friends.htm
+++ b/friends.htm
@@ -102,6 +102,10 @@
         </li>
       </ul>
     </nav>
+    <div class="real-kakao">
+      <i class="fa fa-comment" aria-hidden="true"></i>
+    </div>
+    <div class="big-screen">your screen too big!!!!!</div>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
