--- a/more.htm
+++ b/more.htm
@@ -88,7 +88,7 @@
         </div>
         </div>
       </div>
-      <div class="big-screen">your screen too big!!!!!</div>
+      <div class="big-screen">your screen super! big!!!!!</div>
     </main>
     <nav class="nav">
       <ul class="nav__list">
